only compute one instance of a tree scanner per run
Signed-off-by: Lewis Birks <22620804+lewisbirks@users.noreply.github.com>